# NewsForYou

./: README.md  db.sqlite3  manage.py  pyproject.toml
config/: settings.py
dashboard/: models.py
dashboard/migrations/: 0001_initial.py
news/: models.py
news/migrations/: 0001_initial.py
newsforyou/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py
users/migrations/: 0001_initial.py
