[project]
name = "newsforyou"
version = "1.0.0"
description = "NewsForYou is a Django application that lists News just for you"
authors = [
    {name = "MuratbekJ",email = "muratbekj2006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
